--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,19 +24,10 @@ jobs:
 
       - run: npm ci
 
-      - name: Publish Changeset
+      - name: Publish to NPM
         id: changesets
         uses: changesets/action@v1
         with:
           publish: npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        - name: Create Release
-          uses: actions/create-release@v1
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          with:
-            tag_name: ${{ github.ref }}
-            release_name: Release ${{ github.ref }}
-            draft: false
-            prerelease: false
