--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nextjs-ts-blank",
-  "version": "1.0.2",
-  "private": true,
+  "version": "1.1.0",
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,8 +10,7 @@
     "commit": "cz",
     "prepare": "husky install",
     "changeset": "changeset",
-    "version-packages": "changeset version",
-    "release": "npm run build && changeset publish"
+    "version-packages": "changeset version"
   },
   "dependencies": {
     "@types/node": "18.13.0",
