--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "nextjs-ts-blank",
-  "version": "1.1.1",
-  "private": false,
+  "version": "1.1.2",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "commit": "cz",
-    "prepare": "husky install",
-    "changeset": "changeset",
-    "version-packages": "changeset version"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@types/node": "18.13.0",
@@ -24,7 +22,6 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.26.0",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@rocketseat/eslint-config": "^1.2.0",
